# Lagents

./: .gitignore  README.md  pyproject.toml
notebooks/: reflection_pattern.ipynb
src/lagents/: __main__.py
src/lagents/patterns/: reflection.py
