[project]
name = "Lagents"
version = "0.1.0"
dependencies = [
    "groq",
    "ipython",
    "python-dotenv",
]

[project.urls]
Repository = "https://github.com/Arktetra/Lagents.git"

[project.scripts]
lagents = "lagents.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E722", "E731", "F722"]